Worked on implementing wild cards. Doesn't work well completely, but it is close